changing Angular folder to upper case A

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -15,13 +15,13 @@
         return window.twttr || (t = { _e: [], ready: function(f){ t._e.push(f) } });
         }(document, "script", "twitter-wjs"));
         </script>
-        <script src="/angular/angular.min.js"></script>
-        <script src="/angular-ui/ui-bootstrap-tpls-1.1.2.min.js"></script>
+        <script src="/Angular/angular.min.js"></script>
+        <script src="/Angular-UI/ui-bootstrap-tpls-1.1.2.min.js"></script>
         <script src="/lib/angular-route.min.js"></script>
         <script src="/lib/angular-sanitize.min.js"></script>
         <script src="/lib/angular-animate.min.js"></script>
 <!--        we minified all of our client js files - when adding new filed remmember to update the minifier-->
-        <script src="/angular/seattweet.min.js"></script>
+        <script src="/Angular/seattweet.min.js"></script>
         <script src="/javascripts/jquery-2.1.4.min.js"></script>
         <script src="/bootstrap/js/bootstrap.min.js"></script>
         <script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
