changing titles to reflect new name bleacheerz

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -2,7 +2,7 @@
 <html ng-app="seattweetApp">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Seat-Tweet</title>
+        <title>BLEACHEERZ</title>
         <link rel="stylesheet" href="/bootstrap/css/sandstone.bootstrap.css">
         <link rel="styleshet" href="/stylesheets/style.css">
     </head>
