--- a/app_client/common/directives/navigation/navigation.template.html
+++ b/app_client/common/directives/navigation/navigation.template.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a href="/" class="navbar-brand">Seat-Tweet</a>
+            <a href="/" class="navbar-brand">BLEACHEERZ</a>
             <button type="button" data-toggle="collapse" data-target="#navbar-main" class="navbar-toggle">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
