--- a/app_client/locationStreams/locationStreams.view.html
+++ b/app_client/locationStreams/locationStreams.view.html
@@ -6,7 +6,7 @@
         <div class="col-md-2">
             <left-navigation></left-navigation>
         </div>
-        <div class="col-xs-8 col-md-8">
+        <div class="col-xs-8 col-md-8" window-scroll="loadOlderStreams()">
             <div>
                 <button type="button" class="btn btn-primary btn-lg btn-block" ng-show="vm.newTweetsCount > 0" ng-click="loadNewStreams()">New Streams Count: {{vm.newTweetsCount}}</button>
             </div>
