adding twttr widget code to controller

--- a/app_client/locationStreams/locationStreams.view.html
+++ b/app_client/locationStreams/locationStreams.view.html
@@ -17,7 +17,7 @@
                     </div>
                     <div>
                         <blockquote class="twitter-tweet" hide_tweet="true">
-                            <a href="http://twitter.com/twitter/status/{{tweet.twid_str}}"></a>
+                            <a ng-href="http://twitter.com/twitter/status/{{tweet.twid_str}}"></a>
                         </blockquote>
                     </div>
                 </div>
