adding some more logging

--- a/app_client/locationStreams/locationStreams.view.html
+++ b/app_client/locationStreams/locationStreams.view.html
@@ -15,7 +15,7 @@
                     <div class="instagrmDiv" ng-show="{{tweet.containsInstagram}}">
                         <img class="instagramImg" src="{{tweet.instagram}}">
                     </div>
-                    <div id="twitter-wjs">
+                    <div>
                         <blockquote  class="twitter-tweet" hide_tweet="true">
                             <a ng-href="http://twitter.com/twitter/status/{{tweet.twid_str}}"></a>
                         </blockquote>
