--- a/app_client/locationStreams/locationStreams.view.html
+++ b/app_client/locationStreams/locationStreams.view.html
@@ -27,4 +27,25 @@
     </div>
     <footer-generic></footer-generic>
 </div>
-<script src= "https://platform.twitter.com/widgets.js"></script>
+<script type="text/javascript-lazy">
+window.twttr = (function(d, s, id) {
+        console.log(d.getElementsByTagName(s));
+        var js, fjs = d.getElementsByTagName(s)[0],
+        t = window.twttr || {};
+        if (d.getElementById(id)) return t;
+        js = d.createElement(s);
+        js.id = id;
+        //js.src = "https://platform.twitter.com/widgets.js";
+        js.src = "../twitter/widgets.js";
+
+        console.log(js);
+
+        fjs.parentNode.insertBefore(js, fjs);
+        t._e = [];
+        t.ready = function(f) {
+            t._e.push(f);
+        };
+
+      return t;
+    }(document, "script", "twitter-wjs"));
+</script>
