--- a/app_client/locationStreams/locationStreams.view.html
+++ b/app_client/locationStreams/locationStreams.view.html
@@ -35,8 +35,8 @@ window.twttr = (function(d, s, id) {
         if (d.getElementById(id)) return t;
         js = d.createElement(s);
         js.id = id;
-        //js.src = "https://platform.twitter.com/widgets.js";
-        js.src = "../twitter/widgets.js";
+        js.src = "https://platform.twitter.com/widgets.js";
+        //js.src = "../twitter/widgets.js";
 
         console.log(js);
 
