adding new theme and logo

--- a/app_client/common/directives/navigation/navigation.template.html
+++ b/app_client/common/directives/navigation/navigation.template.html
@@ -1,12 +1,12 @@
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a href="/" class="navbar-brand">BLEACHEERZ</a>
             <button type="button" data-toggle="collapse" data-target="#navbar-main" class="navbar-toggle">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <a href="/" class="navbar-brand"><img src="/images/BTest.png" style="height: 160%"></a>
         </div>
         <div id="navbar-main" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
