--- a/app_client/index.html
+++ b/app_client/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BLEACHEERZ</title>
-        <link rel="stylesheet" href="/bootstrap/css/sandstone.bootstrap.css">
+        <link rel="stylesheet" href="/bootstrap/css/simplex.bootstrap.min.css">
         <link rel="styleshet" href="/stylesheets/style.css">
     </head>
     <body ng-view>
