--- a/app_client/common/directives/navigation/navigation.template.html
+++ b/app_client/common/directives/navigation/navigation.template.html
@@ -12,6 +12,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="/#about">About</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="" ng-click="navvm.login()"><img src="/images/sign-in-with-twitter-gray.png"></a></li>
+            </ul>
         </div>
     </div>
 </div>
